# Tachyon-Engine

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml_disabled  Build.sh  CMakeLists.txt  Makefile  README.md  RunEditor.sh  RunEngine.sh  RunTests.sh  kernel.cl  main.cpp  settings.cfg  settings.conf
config/: kernel_sequence.cfg  macros.cfg  substances_to_load.cfg  system.cfg
editor/: Boids.h  CMakeLists.txt  Fractal.h  Landscape.h  Lines.h  Snake.h  Water.h  main.cpp
engine_kernel_fragments/: apply_gravity.pykn  draw_moved_pixels.pykn  draw_pixels.pykn  drown_voxel.pykn  example.pykn  if_movable_object_end.pykn  if_movable_object_start.pykn  if_not_bottom_row_end.pykn  if_not_bottom_row_start.pykn  jamm_voxel.pykn  kernel_end.pykn  kernel_header.pykn  relocation_variables.pykn  simplest_collision.pykn  some_code.pykn  sum.cl
engine_kernels/: apply_flowability.cl  apply_gravity.cl  create_new_voxel_map.cl  drown_voxel.cl  fix_placement.cl  init_collision.cl  move.cl  move_and_collide.cl  populate_collision.cl  populate_hasch.cl  set_all_voxels.cl  transfer_energy.cl  update_canvas.cl  zero_hash.cl
engine_structs/: 1_vector2D.clcpp  2_voxel.clcpp  3_chunk.clcpp  4_color.clcpp  5_substance.clcpp  6_substanceTable.clcpp  7_engineResources.clcpp  8_engineConfig.clcpp  chunk.clcpp  color.cl  color.clcpp  engineConfig.cl  engineConfig.clcpp  engineResources.cl  engineResources.clcpp  substance.cl  substance.clcpp  substanceTable.clcpp  vector2D.cl  vector2D.clcpp  voxel.cl  voxel.clcpp
html/: _8_i_physics_processor_8h.html  _8_i_physics_processor_8h__incl.map  _8_i_physics_processor_8h__incl.md5  _8_i_physics_processor_8h_source.html  _8_physics_processor___fallback_8cpp.html  _8_physics_processor___fallback_8cpp__incl.map  _8_physics_processor___fallback_8cpp__incl.md5  _8_physics_processor___fallback_8cpp_source.html  _8_physics_processor___fallback_8h.html  _8_physics_processor___fallback_8h__incl.map  _8_physics_processor___fallback_8h__incl.md5  _8_physics_processor___fallback_8h_source.html  _8_physics_processor__old_8cpp.html  _8_physics_processor__old_8cpp__incl.map  _8_physics_processor__old_8cpp__incl.md5  _8_physics_processor__old_8cpp_source.html  _8_physics_processor__old_8h.html  _8_physics_processor__old_8h__incl.map  _8_physics_processor__old_8h__incl.md5  _8_physics_processor__old_8h_source.html  _8_physics_processor_builder__old_8cpp.html  _8_physics_processor_builder__old_8cpp__incl.map  _8_physics_processor_builder__old_8cpp__incl.md5  _8_physics_processor_builder__old_8cpp_source.html  _8main__old_8cpp.html  _8main__old_8cpp__incl.map  _8main__old_8cpp__incl.md5  _8main__old_8cpp_a173d0b0ae4ac00db7ff766ed8bc4e2c7_cgraph.map  _8main__old_8cpp_a173d0b0ae4ac00db7ff766ed8bc4e2c7_cgraph.md5  _8main__old_8cpp_a173d0b0ae4ac00db7ff766ed8bc4e2c7_icgraph.map  _8main__old_8cpp_a173d0b0ae4ac00db7ff766ed8bc4e2c7_icgraph.md5  _8main__old_8cpp_a2d03c6f2666863543429a06ef642fe6a_icgraph.map  _8main__old_8cpp_a2d03c6f2666863543429a06ef642fe6a_icgraph.md5  _8main__old_8cpp_a708f610f4ec78537f4da966770d9b57b_icgraph.md5  _8main__old_8cpp_a7f9c09fcd855cc9b01d97178ac5ca638_icgraph.map  _8main__old_8cpp_a7f9c09fcd855cc9b01d97178ac5ca638_icgraph.md5  _8main__old_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  _8main__old_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  _8main__old_8cpp_source.html  _application_8h.html  (+2539 more)
latex/: _8_i_physics_processor_8h.tex  _8_i_physics_processor_8h__incl.md5  _8_physics_processor__old_8h.tex  (+1176 more)
src/: CMakeLists.txt  Headers.h  main.cpp  point.cpp  point.h
src/ECSystem/: Application.h  Attribute.h  AttributeContainer.cpp  AttributeContainer.h  AttributeManager.h  Channel.cpp  Channel.h  Configurator.cpp  Configurator.h  CubeSprite.cpp  EntityContainer.h  EntityContainerIterator.h  EventQueueElement.cpp  EventQueueElement.h  EventRegister.cpp  EventRegister.h  GraphicSystem.h  IClient.h  IIterable.h  ILog.h  IRunnable.h  IShareable.h  InteractionSystem.h  LineRenderer.h  Mesh.h  MeshLoader.cpp  MeshLoader.h  Message.h  MessageBus.cpp  MessageBus.h  MessageType.h  Microkernel.h  Quaternion.h  Settings.h  SharedNameResolver.cpp  SharedNameResolver.h  SquareMatrix.cpp  SquareMatrix.h  SquareMatrix.tpp  System.cpp  (+11 more)
src/GUIRenderer/: BitmapReader.cpp  BitmapReader.h  Button.cpp  Button.h  ButtonElement.h  Camera.h  Canvas.cpp  Canvas.h  CanvasElement.h  Color.cpp  Color.h  Component.cpp  Component.h  ComponentType.h  Converter.cpp  Converter.h  CubeSprite.h  EventInfo.h  EventManager.cpp  EventManager.h  EventType.h  GLShader.h  GUIElement.h  Glyf.h  IEventHandlingService.h  IEventListener.h  IInputHandler.h  IInputHandlingService.h  IShareableContext.h  Image.h  ImageEditor.cpp  ImageEditor.h  Input.h  InputEvent.h  InteractionManager.h  InteractiveComponent.cpp  InteractiveComponent.h  InteractiveElement.h  KDT.cpp  KDT.h  (+37 more)
src/PhysicsProcessor/: ClStructParser.cpp  ClStructParser.h  FpsLimiter.cpp  FpsLimiter.h  IPhysicsProcessor.h  KernelBuilder.cpp  KernelBuilder.h  KernelCollector.cpp  KernelCollector.h  KernelQueueBuilder.cpp  KernelQueueBuilder.h  MacroManager.cpp  MacroManager.h  PhysicsProcessor.cpp  PhysicsProcessor.h  PhysicsProcessorBuilder.cpp  PhysicsProcessorBuilder.h  PhysicsProcessorBuilderV2.h  PhysicsProcessorBuilder_old.cpp  PhysicsProcessorSystem.cpp  PhysicsProcessorSystem.h  PhysicsProcessor_Fallback.cpp  PhysicsProcessor_Fallback.h  PhysicsProcessor_old.cpp  SizeCalculator.cpp  SizeCalculator.h  StructCollector.cpp  StructCollector.h  StructTree.cpp  StructTree.h  SubstanceCollector.cpp  SubstanceCollector.h  SubstanceCreator.h  engineConfig.h  engineStruct.h  kernelData.h  kernelExecution.h  kernelExecutionUnit.h  kernelFragment.cpp  kernelFragment.h  (+7 more)
src/PhysicsProcessor/Scenatrios/: AScenario.h  Scenario_Block.cpp  Scenario_Block.h  Scenario_DifferentSubstances.cpp  Scenario_DifferentSubstances.h  Scenario_NormalDistribution.cpp  Scenario_NormalDistribution.h  Scenario_WaterMaze.cpp  Scenario_WaterMaze.h
tests/: AttributeContainerTest.cpp  CMakeLists.txt  EventRegisterTest.cpp  KDTTest.cpp  UIBuilderTest.cpp  unit_test.cpp
(+191 files in other folders)
